{
    "name": "InputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "977d42b1-5bd7-43ad-8796-45131933ff57",
            "actions": [
                {
                    "name": "MoveBack",
                    "type": "Button",
                    "id": "57c9dc65-5727-4744-8f3c-3859a61a69e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "281527cf-d380-4af7-8e72-c0e9ee6e2690",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanBack",
                    "type": "Button",
                    "id": "b733ad93-53e6-4e5c-9ba5-0a7329b205d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanForward",
                    "type": "Button",
                    "id": "c5bf556b-6f2e-4f4f-beb9-28f16447aecc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b79bbae-1b98-4eda-990d-f72c8cdf3a28",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dea0bea-758c-4614-9007-4c540108afb1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db9ea1f9-1941-49c0-b271-d5a208b7ce73",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e43c9f57-5085-4f71-85a6-3794903ecce1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}